kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: kib01
   namespace: elk
   labels:
     elk-component: kib01
spec:
   selector:
      elk-component: kib01
   ports:
      - port: 5601
        targetPort: 5601
        name: "kibana5601"
        protocol: TCP
