kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: kibana-ingress
   namespace: elk
   annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   tls:
   - hosts:
       - <<HOSTNAME FOR YOUR KIBANA SERVICE>>
     secretName: <<WILDCARD CERTIFICATE NAME>>
   rules:
   - host: <<HOSTNAME FOR YOUR KIBANA SERVICE>>
     http:
        paths:
        - path: /
          pathType: Prefix
          backend:
             service:
                name: kib01
                port:
                   number: 5601
